--- a/SourceGit/UI/WorkingCopy.xaml
+++ b/SourceGit/UI/WorkingCopy.xaml
@@ -344,6 +344,7 @@
                 ScrollViewer.VerticalScrollBarVisibility="Auto"
                 helpers:TextBoxHelper.Placeholder="Enter commit message"
                 helpers:TextBoxHelper.PlaceholderBaseline="Top"
+                GotFocus="CommitMsgGotFocus"
                 PreviewMouseWheel="CommitMsgPreviewMouseWheel">
                 <TextBox.Text>
                     <Binding ElementName="me" Path="CommitMessage" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
