--- a/SourceGit/UI/CreateTag.xaml
+++ b/SourceGit/UI/CreateTag.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SourceGit.UI.CreateTag"
+<UserControl x:Class="SourceGit.UI.CreateTag"
              x:Name="me"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -49,8 +49,10 @@
         <TextBox Grid.Row="4" Grid.Column="1"
                  x:Name="tagMessage"
                  Height="56"
+                 Padding="2"
                  AcceptsReturn="True"
-                 helpers:TextBoxHelper.Placeholder="Optional"/>
+                 helpers:TextBoxHelper.Placeholder="Optional"
+                 helpers:TextBoxHelper.PlaceholderBaseline="Top"/>
 
         <Grid Grid.Row="6" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
