--- a/SourceGit/UI/Stashes.xaml
+++ b/SourceGit/UI/Stashes.xaml
@@ -31,7 +31,7 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <Label Content="STASHES" Foreground="{StaticResource Brush.FG2}" FontWeight="Bold"/>
+                <Label Content="STASHES" Foreground="{StaticResource Brush.FG}"  Opacity=".4" FontWeight="Bold"/>
                 <ListView
                     Grid.Row="1"
                     x:Name="stashList"
@@ -83,7 +83,7 @@
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
 
-                    <Label Grid.Column="0" Content="CHANGES" Foreground="{StaticResource Brush.FG2}" FontWeight="Bold"/>
+                    <Label Grid.Column="0" Content="CHANGES" Foreground="{StaticResource Brush.FG}"  Opacity=".4" FontWeight="Bold"/>
                     <Label Grid.Column="1" Content="Untracked files not included" Foreground="{StaticResource Brush.FG2}" FontSize="10"/>
                 </Grid>
                 
