--- a/SourceGit/UI/Blame.xaml
+++ b/SourceGit/UI/Blame.xaml
@@ -5,6 +5,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
+        Title="Blame"
         Height="600" Width="800">
 
     <!-- Enable WindowChrome -->
